force-app/main/default/objects/Apttus_Config2__GuidedSearchRuleEntry__c/Apttus_Config2__GuidedSearchRuleEntry__c.object-meta.xml
<CustomObject>
    <description>Represents a single entry in a guided search rule</description>
    <label>Guided Search Rule Entry</label>
    <nameField>
        <displayFormat>RE-{0000000000}</displayFormat>
        <label>Rule Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guided Search Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>