force-app/main/default/objects/Apttus_Config2__GuidedSearchRuleEntry__c/fields/Apttus_Config2__GuidedAnswer1__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GuidedAnswer1__c</fullName>
    <description>The answer for the first guided question.</description>
    <label>Guided Answer 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>