force-app/main/default/objects/Apttus_Config2__GuidedSearchRuleEntry__c/fields/Apttus_Config2__GuidedAnswer3__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GuidedAnswer3__c</fullName>
    <description>The answer for the third guided question.</description>
    <label>Guided Answer 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>