force-app/main/default/objects/Apttus_Config2__GuidedSearchRuleEntry__c/fields/Apttus_Config2__GuidedAnswer6__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GuidedAnswer6__c</fullName>
    <description>The answer for the sixth guided question.</description>
    <label>Guided Answer 6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>