force-app/main/default/objects/Apttus_Config2__GuidedSearchRuleEntry__c/fields/Apttus_Config2__InclusionCriteriaFieldValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InclusionCriteriaFieldValue__c</fullName>
    <description>The entry inclusion criteria value</description>
    <label>Inclusion Criteria Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>