force-app/main/default/objects/Apttus_Config2__GuidedSearchRuleEntry__c/fields/Apttus_Config2__MatchRule__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchRule__c</fullName>
    <description>Indicates if the rule should match all or match any filter conditions</description>
    <label>Match Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Match All</fullName>
                <default>true</default>
                <label>Match All</label>
            </value>
            <value>
                <fullName>Match Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>